--- a/stackgres-k8s/src/admin-ui/public/assets/css/sg-1.0.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/sg-1.0.css
@@ -1,10 +1,11 @@
 /* SG 1.0 Color Variables */
 :root {
     --white: #ffffff;
+    --black: #171717;
     --mediumBlue: #383753;
     --darkBlue: #060528;
     --blue: #36A8FF;
-    --lBlue: #4DFFD8;
+    --lBlue: #5ad2ff;
     --yellow: #FABE25;
     --lYellow: #FFFC66;
     --green: #16A085;
@@ -13,7 +14,7 @@
     --lOrange: #FF9E17;
 }
 body {
-    --textColor: var(--darkBlue);
+    --textColor: var(--black);
     --bgColor: var(--white);
     --borderColor: #cfcfe5;
     --inputBg: #f2f2f7;
@@ -27,11 +28,11 @@ body {
 }
 body.darkmode {
     --textColor: var(--white);
-    --bgColor: var(--darkBlue);
-    --borderColor: var(--mediumBlue) ;
-    --inputBg: #272642;
+    --bgColor: var(--black);
+    --borderColor: #2f2f2f ;
+    --inputBg: rgba(255,255,255,.05);
     --rowBg: #141233;
-    --activeBg: #161636;
+    --activeBg: var(--inputBg);
     --baseColor: var(--blue);
     --baseLightColor: var(--lBlue);
     --baseGradient: linear-gradient(to bottom right, var(--baseColor), var(--baseLightColor));
@@ -99,6 +100,14 @@ body.yellow ::selection {
     border-radius: 3px;
 }
 
+a:hover, header .add:hover, tr.controlData a:hover {
+    color: var(--baseLightColor);
+}
+
+.set li a:hover {
+    color: var(--baseColor);
+}
+
 .textGradient {
     color: var(--baseColor);
     background-image: var(--baseGradient);
@@ -144,11 +153,11 @@ body, #sets h4, #sets h3, #side a.router-link-exact-active, th, .tabs a, #keywor
 }
 
 .actions a:hover svg path, tr.controlData a:hover svg path {
-    fill: var(--lBlue);
+    fill: var(--baseLightColor);
 }
 
 #side a.addnew:hover svg * {
-    stroke: var(--lBlue) !important;
+    stroke: var(--baseLightColor) !important;
 }
 
 .daterangepicker td.active, .daterangepicker td.active:hover, .daterangepicker td.available:hover {
@@ -156,7 +165,7 @@ body, #sets h4, #sets h3, #side a.router-link-exact-active, th, .tabs a, #keywor
 }
 
 .btn:hover {
-    background-color: var(--lBlue);
+    background-color: var(--baseLightColor);
 }
 
 .toolbar .btn:hover, button:hover {
@@ -171,7 +180,7 @@ body, #sets h4, #sets h3, #side a.router-link-exact-active, th, .tabs a, #keywor
     background-color: var(--bgColor);
 }
 
- #side, .set.conf.active, #nav, .set:not(.active) ul.show:before, .tooltip, #contentTooltip .info, .set.active:not(.conf):not(.backups), .set.active:not(.conf), #current-namespace, .set, #ns-select, ul.breadcrumbs, header .actions, #keyword, table.backups thead, .toolbar .toggle, .options, hr, .darkmode .daterangepicker, .darkmode .daterangepicker .calendar-time, .darkmode .daterangepicker .drp-buttons, tbody, tr.details table th, tr.details table td,  td.usedOn li, .content h2, ul.tabs, table.clusterConfig td, table.logs thead, .options li.textFilter .search, .filter.columns label, .filter.columns input[type="checkbox"], .darkmode .daterangepicker select.hourselect, .message, .form .header, fieldset, ul.select, .form select, .form input, label.switch, #nav .right > div#clone, .form textarea, #logTooltip.show, #nameTooltip.show, #helpTooltip, #nav .right > div#signup, #signup input, #delete .tooltip h3, #delete .tooltip form input, .grafana iframe, .logInfo.open .logMessage, .logMessage .param, .logDetails.postgres tr:not(:last-of-type), .logDetails.patroni tr:not(:last-of-type), .logDetails table, .logDetails td.param {
+ #side, .set.conf.active, #nav, .set:not(.active) ul.show:before, .tooltip, #contentTooltip .info, .set.active:not(.conf):not(.backups), .set.active:not(.conf), #current-namespace, .set, #ns-select, ul.breadcrumbs, header .actions, #keyword, table.backups thead, .toolbar .toggle, .options, hr, .darkmode .daterangepicker, .darkmode .daterangepicker .calendar-time, .darkmode .daterangepicker .drp-buttons, tbody, tr.details table th, tr.details table td,  td.usedOn li, .content h2, ul.tabs, table.clusterConfig td, table.logs thead, .options li.textFilter .search, .filter.columns label, .filter.columns input[type="checkbox"], .darkmode .daterangepicker select.hourselect, .message, .form .header, fieldset, ul.select, .form select, .form input, label.switch, #nav .right > div#clone, .form textarea, #logTooltip.show, #nameTooltip.show, #helpTooltip, #nav .right > div#signup, #signup input, #delete .tooltip h3, #delete .tooltip form input, .grafana iframe, .logInfo.open .logMessage, .logMessage .param, .logDetails.postgres tr:not(:last-of-type), .logDetails.patroni tr:not(:last-of-type), .logDetails table, .logDetails td.param, fieldset .section {
     border-color: var(--borderColor);
 }
 
@@ -197,6 +206,18 @@ tr:nth-child(even), tr:nth-child(even) + tr.details, table tr:nth-child(even):no
 
 .form input[disabled="disabled"], .form select[disabled="disabled"], .form textarea[disabled="disabled"], .form fieldset[disabled="disabled"], label.switch[disabled="disabled"] {
     opacity: .3;
+}
+
+.form button.border:hover, .btn.border:hover, .daterangepicker button.cancelBtn, .btn.clear:hover {
+    background-color: rgb(0 114 255 / 25%);
+}
+
+svg.background circle {
+    stroke: rgb(0 114 255 / 25%);
+}
+
+.darkmode tr.details table th, .darkmode tr.details table td {
+    border-color: #444444;
 }
 
 
