fix: crontab fields layout broken with new font

--- a/stackgres-k8s/src/admin-ui/public/style.css
+++ b/stackgres-k8s/src/admin-ui/public/style.css
@@ -332,7 +332,11 @@ form#login .warning {
 }
 
 .cron.row-20 label {
-    min-width: 90px;
+    min-width: 100%;
+    font-size: 90%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 
