fix: Logs infinite scroll feature

--- a/stackgres-k8s/src/admin-ui/public/style.css
+++ b/stackgres-k8s/src/admin-ui/public/style.css
@@ -580,8 +580,8 @@ form#login .warning {
 }
 
 .darkmode table.loading:after {
-    background: url('img/loader.gif') center center no-repeat rgba(0,0,0,.5);
-    background-size: 80px;
+    background: url(img/loader.gif) center center no-repeat rgba(6, 5, 40, .9);
+    background-size: 30px;
 }
 
 /* Dark mode - Log in */
@@ -4238,7 +4238,8 @@ tr.logInfo.open:before {
 
 /* Luis Logs & Filters */
 table.logs {
-    max-height: calc(100vh - 353px);
+    max-height: calc(100vh - 335px);
+    height: calc(100vh - 335px);
     max-width: calc(100vw - 430px);
     display: inline-block;
     overflow: auto;
@@ -4254,14 +4255,15 @@ table.logs:after {
 }
 
 table.loading:after {
+    border-radius: 100%;
     content: " ";
     position: fixed;
-    top: 289px;
-    right: 48px;
-    width: calc(100vw - 439px);
-    height: calc(100vh - 341px) !important;
-    background: url(img/loader.gif) center center no-repeat rgba(255,255,255,.7);
-    background-size: 80px;
+    bottom: 60px;
+    right: 50px;
+    width: 50px;
+    height: 50px;
+    background: url(img/loader.gif) center center no-repeat rgba(0,0,0,.1);
+    background-size: 30px;
     opacity: 1;
     transition: opacity .4s ease-in;
 }
