--- a/stackgres-k8s/src/admin-ui/public/assets/css/sg-1.0.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/sg-1.0.css
@@ -178,7 +178,7 @@ body, #sets h4, #sets h3, #side a.router-link-exact-active, th, .tabs a, #keywor
 }
 
 .darkmode #side, .darkmode #nav {
-    background: transparent;
+    background: var(--bgColor);
 }
 
 .btn, .toolbar .filter.open .toggle, .toolbar .filter.open .toggle:after, .btn:hover, .form .btn:not(.border), .options input[type="checkbox"].active + span, form#login button {
@@ -209,7 +209,7 @@ body, #sets h4, #sets h3, #side a.router-link-exact-active, th, .tabs a, #keywor
     background-color: var(--borderColor);
 }
 
-.btn.border:hover, .btn.border, .darkmode .btn.border, .darkmode a.btn.border:not(.clear) {
+.btn.border:hover, .btn.border, .darkmode .btn.border, .darkmode a.btn.border:not(.clear), .darkmode button.toggleFields {
     color: var(--blue);
 }
 
