doc: set FAQ url relative to baseURL

--- a/doc/themes/sg-doc/layouts/partials/menu.html
+++ b/doc/themes/sg-doc/layouts/partials/menu.html
@@ -30,7 +30,11 @@
         <ul>
           {{ range sort . "Weight"}}
               <li> 
-                  {{.Pre}}<a class="padding" href="{{.URL | absLangURL }}">{{safeHTML .Name}}</a>{{.Post}}
+                  {{ if eq .Name "FAQ" }}
+                    {{.Pre}}<a class="padding" href="{{ $.Site.BaseURL }}{{.URL | relLangURL }}"><i class='fas fa-question-circle'></i> &nbsp;{{safeHTML .Name}}</a>{{.Post}}
+                  {{ else }}
+                    {{.Pre}}<a class="padding" href="{{.URL | absLangURL }}">{{safeHTML .Name}}</a>{{.Post}}
+                  {{ end }}
               </li>
           {{end}}
         </ul>
