--- a/stackgres-k8s/src/admin-ui/public/style.css
+++ b/stackgres-k8s/src/admin-ui/public/style.css
@@ -4988,6 +4988,16 @@ tr.details td:last-of-type .configurationDetails table {
     margin-top: -45px;
 }
 
+.no-data {
+    height: 120px;
+    text-align: center;
+    border-bottom: 1px solid var(--gray2);
+    padding-top: 40px;
+}
+
+.darkmode .no-data {
+    border-color: #333;
+}
 .configurationDetails table + span.title {
     margin-top: 20px;
 }
