feat: support node selectors and tolerations for Distributed Logs on the web console

--- a/stackgres-k8s/src/admin-ui/public/style.css
+++ b/stackgres-k8s/src/admin-ui/public/style.css
@@ -4999,3 +4999,7 @@ tr.details td:last-of-type .configurationDetails table {
 .darkmode .no-data {
     border-color: #333;
 }
+
+.configurationDetails table + span.title {
+    margin-top: 20px;
+}
