fix(ui): make sure annotations are editable from cluster edit form

--- a/stackgres-k8s/src/admin-ui/public/assets/css/style.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/style.css
@@ -5053,7 +5053,7 @@ td.label .helpTooltip {
     display: none;
 }
 
-.form > fieldset > .header:not(.open) {
+.form .accordion > .header:not(.open), .form fieldset:not(.accordion) .header:last-child {
     border: 0;
 }
 
