docs(ui): Create version specific dropdown selector on SG docs

--- a/doc/themes/sg-doc/layouts/partials/menu-footer.html
+++ b/doc/themes/sg-doc/layouts/partials/menu-footer.html
@@ -1,2 +1,12 @@
+<div class="versionSelector">
+    <hr>
+    <form>
+        <label for="sgVersion">StackGres Docs Version</label>
+        <select name="sgVersion" id="sgVersion">
+            <option value="https://stackgres.io/doc/0.9" selected>0.9</option>
+            <option value="https://stackgres.io/doc/latest">1.0</option>
+        </select>
+    </form>
+</div>
 <hr/>
 <p>This documentation is open-source. Please help improve it by <a href="https://gitlab.com/ongresinc/stackgres/" target="_blank">filing issues or pull requests.</a></p>
