fix(ui): accordion expand/collapse buttons not visible on darkmode

--- a/stackgres-k8s/src/admin-ui/public/assets/css/sg-1.0.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/sg-1.0.css
@@ -214,7 +214,7 @@ body, #sets h4, #sets h3, #side a.router-link-exact-active, th, .tabs a, #keywor
     background-color: var(--borderColor);
 }
 
-.btn.border:hover, .btn.border, .darkmode .btn.border, .darkmode a.btn.border:not(.clear) {
+.btn.border:hover, .btn.border, .darkmode .btn.border, .darkmode a.btn.border:not(.clear), fieldset .header button, .darkmode .form button, button {
     color: var(--blue);
 }
 
